--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.14.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.6"
+    "sequelize": "^6.37.6",
+    "youtube-transcript": "^1.2.1"
   }
 }
