--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ GOOGLE_CLIENT_SECRET=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
 GOOGLE_REDIRECT_URI=https://stream2notes-backend.onrender.com/ytnotes/google/callback
 FRONTEND_URL=https://youtubenotemaker.vercel.app
 JWT_SECRET=your_jwt_secret
-DATABASE_URL=postgresql://postgres:iUUAGNwRyyctjiFulBXiAXZZWBoCZLqH@crossover.proxy.rlwy.net:32115/railway
+DATABASE_URL=postgresql://dibya:subham04@projectytnotes.c1ymcsk0y7os.ap-south-1.rds.amazonaws.com:5432/postgres
 PORT=5000
 secure: process.env.NODE_ENV === "production"
 # FRONTEND_URL=http://localhost:5173
